# Integrated-lab.-I

./: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
